Started working on a smarter way to make tests